# ITKOpCannyEdgeDetectionImageFilter

./: .gitignore  ITKOpCannyEdgeDetectionImageFilter.sln  ITKOpCannyEdgeDetectionImageFilter.userprefs  README  itkop.patch
docs/: grid.xcf
src/: CMakeCache.txt  CMakeLists.txt  ITKOpCannyEdgeDetectionImageFilter.cproj  ITKOpCannyEdgeDetectionImageFilter.pidb  StopWatch.cpp  StopWatch.h  itkOpCannyEdgeDetectionImageFilter.txx  itkOpGaussianOperator.h  statistics.h  test.cfg  util.h
src/ITKOpCannyEdgeDetectionImageFilter/: .gitignore  CMakeCache.txt  CMakeLists.txt  ITKOpCannyEdgeDetectionImageFilter.cproj  Makefile  cmake_install.cmake  itkOpCannyEdgeDetectionImageFilter.h  itkOpCannyEdgeDetectionImageFilter.txx  itkOpGaussianOperator.txx  main.cpp  opConvolutionFilter.cpp  opConvolutionFilter.h  statistics.h  util.h
